# pyscript-websocket-example

./: README.md  pyproject.toml
www/: models.py  pydantic.html  server.py
